gccida/c1/mtherr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mtherr/src/real.c:6250:21: error: use of undeclared identifier 'aE'
if ( !strcmp( name, aE) ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mtherr/src/real.c:6307:13: error: use of undeclared identifier 'off_6C5140'
warning( ( &off_6C5140)[code - 1], v3); 
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/mtherr/src/obj/real.o] Error 1
